.kubernetes/aws/mtls/ing-mtls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-go-account
  namespace: test-a
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/default-backend: "svc-go-account"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "test-a/ca-go-account"
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  rules:
    - host: go-account.architecture.caradhras.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-go-account
              port:
                number: 5000
  tls:
  - hosts:
    - go-account.architecture.caradhras.io
    secretName: sc-ing-go-account-tls
